Renamed Files and Fixed Spacing issues(both)

--- a/static/contact.html
+++ b/static/contact.html
@@ -18,13 +18,13 @@
        
 
 <!-- Begin Left Column -->
-<div id="leftcolumn">   
-  <li><a href="occs home.html">Home page</a></li>
-  <li><a href="occs faculty.html">Faculty</a></li>
-  <li><a href="occs cs.html">Computer Science</a></li>
-  <li><a href="occs itm.html">Information Technology</a></li>
-  <li><a href="occs contact.html">Contact</a></li>
-
+<div id="leftcolumn"><center>   
+  <li><a href="home.html">Home page</a></li>
+  <li><a href="faculty.html">Faculty</a></li>
+  <li><a href="cs.html">Computer Science</a></li>
+  <li><a href="itm.html">Information Technology</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</center>
 </div>
 <!-- End Left Column -->
 
@@ -35,29 +35,24 @@
 
 <center>
 
-<p><h1><center>Falculty Information</h1></p>
+<p><h1><center>Contact Information</h1></p>
+
+  <p>If you are interested in the Olivet College Computer Science please feel free to contact either of the professors or Olivet College Admissions for more information.</p>
 
   <h3>Marcus Darden</h3>
-  <img src="dardenm.jpg">
   <li style="list-style-type:none">Assistant Professor of Computer Science</li>
-  <li style="list-style-type:none;">mdarden@olivetcollege.edu</li>   
-  <li style="list-style-type:none;">(269) 749-7663</li> 
+  <li style="list-style-type:none">mdarden@olivetcollege.edu</li>   
+  <li style="list-style-type:none">(269) 749-7663</li> 
   
-  <h3>Bio</h3>
-    <p>Marcus Darden has been teaching at Olivet College for twelve years. He has been the major force behing the development of the Computer Science program at Olivet. Marcus has a Masters Degree in Computer Science from the University of Michigan.
-    </p>
-
   <h3>Michael Fredericks</h3>
-  <img src="fredericksm.jpg">
-  <li style="list-style-type:none;">Assistant Professor of Computer Science</li>
-  <li style="list-style-type:none;">mfredericks@olivetcollege.edu</li>
-  <li style="list-style-type:none;">(269) 749-7628</li>
+  <li style="list-style-type:none">Assistant Professor of Computer Science</li>
+  <li style="list-style-type:none">mfredericks@olivetcollege.edu</li>
+  <li style="list-style-type:none">(269) 749-7628</li>
 
-<h3>Bio</h3>
-    <p> Michael Fredericks has been teaching at Olivet College for 11 years. He has worked along side Marcus in developing the Computer Science Program at Olivet. Michael has a Maseters Degree in Information Systems Administration from Central Michigan. He is also certified in Microsoft Office Suite.
-
-
-    </p>
+  <h3>Adam Wilson</h3>
+  <li style="list-style-type:none">Admissions Representative</li>
+  <li style="list-style-type:none">awilson@olivetcollege.edu</li>
+  <li style="list-style-type:none">(269) 749-7364</li>
 
 </center>
 
