--- a/static/cs.html
+++ b/static/cs.html
@@ -18,13 +18,13 @@
        
 
 <!-- Begin Left Column -->
-<div id="leftcolumn">      
-  <li><a href="occs home.html">Home page</a></li>
-  <li><a href="occs faculty.html">Faculty</a></li>
-  <li><a href="occs cs.html">Computer Science</a></li>
-  <li><a href="occs itm.html">Information Technology</a></li>
-  <li><a href="occs contact.html">Contact</a></li>
-
+<div id="leftcolumn"><center>      
+  <li><a href="home.html">Home page</a></li>
+  <li><a href="faculty.html">Faculty</a></li>
+  <li><a href="cs.html">Computer Science</a></li>
+  <li><a href="itm.html">Information Technology</a></li>
+  <li><a href="contact.html">Contact</a></li>
+</center>
 </div>
 <!-- End Left Column -->
 
