--- a/static/programs.html
+++ b/static/programs.html
@@ -18,14 +18,13 @@
        
 
 <!-- Begin Left Column -->
-<div id="leftcolumn">   
-  <li><a href="occs home.html">Home page</a>
-  <li><a href="occs faculty.html">Faculty</a>
-  <li><a href="occs cs.html">Computer Science</a>
-  <li><a href="occs itm.html">Information Technology</a>
-  <li><a href="occs contact.html">Contact</a>
-</ul>
-
+<div id="leftcolumn"><center>   
+  <li><a href="home.html">Home page</a>
+  <li><a href="faculty.html">Faculty</a>
+  <li><a href="cs.html">Computer Science</a>
+  <li><a href="itm.html">Information Technology</a>
+  <li><a href="contact.html">Contact</a>
+  </center>
 </div>
 <!-- End Left Column -->
 
